<resources>
    <string name="app_name">Schnill</string>
    <string name="title_timer">Timer</string>
    <string name="history">History</string>
    <string name="session_name_focus">Focus Session</string>
    <string name="session_name_break">Break Session</string>
    <string name="title_reminder">Reminder</string>
    <string name="cancel_alert">CANCEL</string>
    <string name="stop_alert">STOP</string>
    <string name="elapsed_session_item">session elapsed :  </string>
    <string name="text_session_elapsed">Session elapsed   </string>
    <string name="item_extra_text_session">\u0020 session</string>
    <string name="tv_elapsed">TV_elapsed</string>
    <string name="stopfab">stopFAB</string>
    <string name="startfab">startFAB</string>
    <string name="savefab">saveFAB</string>


    <string name="note">Note</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="welcome_to_schnill">Schnill</string>
    <string name="choice_greeting">What brings you here today?</string>
    <string name="title_greeting_logo">welcome to</string>
    <string name="elapsed_null">0</string>
    <string name="delete_all">Delete All</string>
    <string name="rv_history_null">You don\'t have any session yet~</string>
    <string name="subtitle_history">your saved sessions will be listed here</string>
    <string name="delete">DELETE</string>
    <string name="history_title">HISTORY?</string>
    <string name="alert_del_history">THIS ACTION WILL DELETE ALL HISTORY</string>
    <string name="alert_stop_dialog">DO YOU WANT TO STOP THE TIMER?</string>
    <string name="yes">YES</string>
    <string name="save">SAVE</string>
    <string name="save_subtitle">THIS SESSION?</string>
    <string name="save_subtitle_2">NAME YOUR SESSION</string>
    <string name="session_s_name">Session\'s Name</string>
    <string name="alert_subtitle_stop_2">TIMER?</string>
    <string name="about">About</string>
    <string name="fabaddreminder">fabAddReminder</string>
    <string name="subtitle_reminder">yours will be listed here</string>
    <string name="save_reminder">THIS REMINDER?</string>
    <string name="null_reminder">THERE IS NO REMINDER YET</string>
    <string name="all_reminder">ALL REMINDER?</string>
    <string name="alert_del_reminder">THIS ACTION WILL DELETE ALL REMINDERS</string>
    <string name="capstone_project">Capstone Project</string>
    <string name="msib_dicoding">MSIB Dicoding</string>
    <string name="sinau_scheduling_chill">Sinau, Scheduling, Chill</string>
    <string name="by_csd_129">by CSD-129</string>
    <string name="find_us_on">Find us on</string>
    <string name="github">Github</string>
    <string name="img">img</string>
    <string name="reminder">Reminder</string>
    <string name="confirm_your_informations">CONFIRM YOUR INFORMATIONS</string>
    <string name="reminder_title">reminder_title</string>
    <string name="reminder_time">reminder_time</string>
    <string name="reminder_date">reminder_date</string>


</resources>