<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="270dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F8F8F8"
                android:contentDescription="@string/img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_bg_alert"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/lime_bg_container"
                android:contentDescription="@string/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/alert_save_logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="@string/img"
                android:src="@drawable/ic_save_line"
                app:layout_constraintBottom_toBottomOf="@id/img_bg_alert"
                app:layout_constraintHorizontal_bias="0.10
"
                app:layout_constraintLeft_toLeftOf="@id/img_bg_alert"
                app:layout_constraintRight_toRightOf="@id/img_bg_alert"
                app:layout_constraintTop_toTopOf="@id/img_bg_alert" />

            <TextView
                android:id="@+id/title_alert_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/alert_save_logo"
                app:layout_constraintTop_toTopOf="@id/alert_save_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-condensed-light"
                android:singleLine="false"
                android:text="@string/save_reminder"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/alert_save_logo"
                app:layout_constraintStart_toEndOf="@id/alert_save_logo"
                app:layout_constraintTop_toBottomOf="@id/title_alert_1" />


            <TextView
                android:id="@+id/alert_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/confirm_your_informations"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:flow_horizontalAlign="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_bg_alert"
                app:layout_constraintVertical_bias="0.05" />

            <TextView
                android:id="@+id/alert_reminder_tvtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/reminder_title"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/alert_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/alert_tv"
                app:layout_constraintTop_toBottomOf="@id/alert_tv" />

            <TextView
                android:id="@+id/alert_reminder_tvdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/reminder_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/alert_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/alert_tv"
                app:layout_constraintTop_toBottomOf="@id/alert_reminder_tvtitle" />

            <TextView
                android:id="@+id/alert_reminder_tvtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/reminder_time"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/alert_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/alert_tv"
                app:layout_constraintTop_toBottomOf="@id/alert_reminder_tvdate" />


            <TextView
                android:id="@+id/alert_reminder_save_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/save"
                android:textColor="@color/lime_schnill"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/alert_reminder_save_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/cancel_alert"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/alert_reminder_save_yes" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>