<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F8F8F8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/img" />

            <ImageView

                android:id="@+id/img_bg_alert"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/yellow_bg_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/img" />

            <ImageView
                android:id="@+id/alert_delete_logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_baseline_delete_black"
                app:layout_constraintBottom_toBottomOf="@id/img_bg_alert"
                app:layout_constraintHorizontal_bias="0.20"
                app:layout_constraintLeft_toLeftOf="@id/img_bg_alert"
                app:layout_constraintRight_toRightOf="@id/img_bg_alert"
                app:layout_constraintTop_toTopOf="@id/img_bg_alert"
                android:contentDescription="@string/img" />

            <TextView
                android:id="@+id/title_alert_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:singleLine="false"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintStart_toEndOf="@id/alert_delete_logo"
                app:layout_constraintTop_toTopOf="@id/alert_delete_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:singleLine="false"
                android:text="@string/history_title"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@id/alert_delete_logo"
                app:layout_constraintStart_toEndOf="@id/alert_delete_logo"
                app:layout_constraintTop_toBottomOf="@id/title_alert_1" />


            <TextView
                android:id="@+id/alert_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-condensed-light"
                android:lines="2"
                android:text="@string/alert_del_history"
                android:textAlignment="center"
                android:textColor="#F30009"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_bg_alert"
                app:layout_constraintVertical_bias="0.05
" />

            <TextView
                android:id="@+id/alert_del_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/delete"
                android:textColor="#F30009"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/alert_del_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/cancel_alert"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/alert_del_yes" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>