<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_timer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowish_schnill"
    tools:context="com.lazibear.capstone_schnill.ui.timer.MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/blue_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/blue_bg"
        app:layout_constraintBottom_toTopOf="@id/btn_session"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_schnill"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_timer"
        app:titleTextColor="@color/white" />


    <Button
        android:id="@+id/btn_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_countdown"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/tv_session_elapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tv_elapsed"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/textView_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@id/progress_countdown"
        app:layout_constraintLeft_toLeftOf="@id/progress_countdown"
        app:layout_constraintRight_toRightOf="@id/progress_countdown"
        app:layout_constraintTop_toTopOf="@id/progress_countdown"

        tools:text="10:00" />

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progress_countdown"
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="306dp"
        android:minHeight="306dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/stopfab"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@id/fab_save"
        app:layout_constraintLeft_toRightOf="@id/fab_start"
        app:layout_constraintRight_toLeftOf="@id/fab_save"
        app:layout_constraintTop_toTopOf="@id/fab_start"
        app:srcCompat="@drawable/ic_stop" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/startfab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84"
        app:srcCompat="@drawable/ic_play_arrow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/savefab"
        app:layout_constraintBottom_toBottomOf="@id/fab_start"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintLeft_toRightOf="@id/fab_start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/fab_start"
        app:srcCompat="@drawable/ic_history" />

    <View
        android:id="@+id/fab_explotion"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/fab_explotion"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/fab_save"
        app:layout_constraintLeft_toLeftOf="@id/fab_save"
        app:layout_constraintRight_toRightOf="@id/fab_save"
        app:layout_constraintTop_toTopOf="@id/fab_save" />


</androidx.constraintlayout.widget.ConstraintLayout>